[gd_scene load_steps=5 format=3 uid="uid://farm_scene"]

[ext_resource type="Script" path="res://scripts/FarmScene.gd" id="1_farm_scene"]
[ext_resource type="Script" path="res://scripts/FarmGrid.gd" id="2_farm_grid"]
[ext_resource type="Script" path="res://scripts/PlayerController.gd" id="3_player_controller"]
[ext_resource type="Script" path="res://scripts/GameUI.gd" id="4_game_ui"]

[sub_resource type="RectangleShape2D" id="1_rect_shape"]
size = Vector2(32, 32)

[node name="FarmScene" type="Node2D"]
script = ExtResource("1_farm_scene")

[node name="FarmGrid" type="Node2D" parent="."]
script = ExtResource("2_farm_grid")

[node name="PlayerController" type="CharacterBody2D" parent="."]
position = Vector2(160, 160)
script = ExtResource("3_player_controller")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerController"]
shape = SubResource("1_rect_shape")

[node name="Sprite2D" type="Sprite2D" parent="PlayerController"]
modulate = Color(0.8, 0.6, 0.4, 1)
scale = Vector2(32, 32)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_game_ui")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = -10.0
grow_vertical = 0

[node name="DateLabel" type="Label" parent="CanvasLayer/GameUI/VBoxContainer"]
layout_mode = 2
text = "Year 1, Day 1 (spring)"

[node name="PlayerInfo" type="HBoxContainer" parent="CanvasLayer/GameUI/VBoxContainer"]
layout_mode = 2

[node name="PlayerAgeLabel" type="Label" parent="CanvasLayer/GameUI/VBoxContainer/PlayerInfo"]
layout_mode = 2
text = "Elias Coalroot - Age 43"

[node name="InventoryPanel" type="Panel" parent="CanvasLayer/GameUI/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 80)

[node name="ItemList" type="ItemList" parent="CanvasLayer/GameUI/VBoxContainer/InventoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Actions" type="VBoxContainer" parent="CanvasLayer/GameUI/VBoxContainer"]
layout_mode = 2

[node name="AdvanceDayButton" type="Button" parent="CanvasLayer/GameUI/VBoxContainer/Actions"]
layout_mode = 2
text = "Advance Day"

[node name="ActionButtons" type="HBoxContainer" parent="CanvasLayer/GameUI/VBoxContainer/Actions"]
layout_mode = 2

